highlight development builds

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>kiwi</title>
+    <title>kiwi [dev]</title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Kiwi Administration">
-    <meta name="author" content="kiwi suite">
+    <meta name="description" content="kiwi [development]">
+    <meta name="author" content="kiwi suite GmbH">
     <link rel="shortcut icon" href="assets/img/icon.png">
 </head>
 <body>
@@ -15,12 +15,13 @@
 <script>
     window.__theme = 'bs4';
     window.__kiwi = {
-        apiUrl: 'https://kiwi.test/api/',
+        apiUrl: 'https://kiwi-v4.app/api/',
         configPath: 'config',
         authPath: 'auth',
         project: {
-            name: 'Kiwi Demo Project',
-            copyright: '2018 kiwi suite'
+            name: 'Kiwi [development]',
+            copyright: '2018 kiwi suite GmbH',
+            poweredBy: true
         }
     };
 </script>
