updated default config models & configuration service tests move deploy-url parameter to npm script in package.json

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>kiwi [dev]</title>
+    <title>Kiwi [dev]</title>
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,11 +16,11 @@
     window.__theme = 'bs4';
     window.__kiwi = {
         apiUrl: 'https://kiwi-v4.app/api/',
-        configPath: 'config',
-        authPath: 'auth',
+        configUrl: 'https://kiwi-v4.app/api/config',
         project: {
+            author: 'kiwi suite GmbH',
+            copyright: 'YYYY',
             name: 'Kiwi [development]',
-            copyright: '2018 kiwi suite GmbH',
             poweredBy: true
         }
     };
