added session service for cookie fetch added api http interceptor: - withCredentials flag for local development - content-type json only for post and put requests

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,13 @@
 <script>
     window.__theme = 'bs4';
     window.__kiwi = {
-        apiUrl: 'https://kiwi-v4.app/api/',
-        configUrl: 'https://kiwi-v4.app/api/config',
+        apiUrl: 'http://kiwi-v4.test/admin/api/',
+        configUrl: 'http://kiwi-v4.test/admin/api/config',
+        sessionUrl: 'http://kiwi-v4.test/admin/session',
         project: {
             author: 'kiwi suite GmbH',
             copyright: 'YYYY',
+            description: 'Kiwi Admin',
             name: 'Kiwi [development]',
             poweredBy: true
         }
