--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,16 @@
 <script>
     window.__theme = 'bs4';
     window.__kiwi = {
-        apiUrl: 'http://kiwi-v4.test/admin/api/',
-        configUrl: 'http://kiwi-v4.test/admin/api/config',
-        sessionUrl: 'http://kiwi-v4.test/admin/session',
         project: {
             author: 'kiwi suite GmbH',
             copyright: 'YYYY',
             description: 'Kiwi Admin',
             name: 'Kiwi [development]',
             poweredBy: true
+        },
+        routes: {
+            config: '/admin/api/config',
+            session: '/admin/session'
         }
     };
 </script>
