updated default image names for whitelableing

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="kiwi [development]">
     <meta name="author" content="kiwi suite GmbH">
-    <link rel="shortcut icon" href="assets/img/icon.png">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
 </head>
 <body>
 <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
