proxy exaple configs (copy to proxy.config.json)

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,16 @@
             poweredBy: true
         },
         routes: {
-            config: '/admin/api/config',
-            session: '/admin/session'
+            /**
+             * vhost
+             */
+            // config: '/admin/api/config',
+            // session: '/admin/session'
+            /**
+             * locahost
+             */
+            config: '/kiwi-v4/admin/api/config',
+            session: '/kiwi-v4/admin/session'
         }
     };
 </script>
