--- a/src/index-example-localhost.html
+++ b/src/index-example-localhost.html
@@ -16,7 +16,7 @@
     window.__kiwi = {
         routes: {
             /**
-             * locahost
+             * localhost
              */
             config: '/kiwi-v4/admin/api/config',
             session: '/kiwi-v4/admin/session'
