--- a/src/index-example-localhost.html
+++ b/src/index-example-localhost.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>[dev] Kiwi</title>
+  <title>[dev] IXOCREATE</title>
   <base href="/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="kiwi [development]">
-  <meta name="author" content="kiwi suite GmbH">
+  <meta name="description" content="IXOCREATE [development]">
+  <meta name="author" content="IXOCREATE GmbH">
   <link rel="shortcut icon" href="assets/img/favicon.png">
 
   <script src="http://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
@@ -20,8 +20,8 @@
       /**
        * localhost
        */
-      config: '/kiwi-v4/admin/api/config',
-      session: '/kiwi-v4/admin/session'
+      config: '/ixocreate/admin/api/config',
+      session: '/ixocreate/admin/session'
     }
   };
 </script>
