--- a/src/index-example-localhost.html
+++ b/src/index-example-localhost.html
@@ -22,7 +22,12 @@
        */
       config: '/ixocreate/admin/api/config',
       session: '/ixocreate/admin/session'
+    },
+    project: {
+      loginUrl: '/ixocreate/admin/login',
+      logoutUrl: '/ixocreate/admin/logout'
     }
+
   };
 </script>
 </body>
