--- a/src/index-example-vhost.html
+++ b/src/index-example-vhost.html
@@ -22,6 +22,10 @@
        */
       config: '/admin/api/config',
       session: '/admin/session'
+    },
+    project: {
+      loginUrl: '/admin/login',
+      logoutUrl: '/admin/logout'
     }
   };
 </script>
