--- a/src/index-example-vhost.html
+++ b/src/index-example-vhost.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="IXOCREATE [development]">
-  <meta name="author" content="IXOCREATE GmbH">
+  <meta name="author" content="IXOLIT GmbH">
   <link rel="shortcut icon" href="assets/img/favicon.png">
 
   <script src="http://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
